# wardrobe

./: .env.example  .gitignore  PB.md  Project Bible.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tables.py  2026_7_13_dd211de0568a_add_title_to_garment.py  2026_7_14_b03f987a7a3f_add_avatar_physical_description.py
backend/app/: main.py
backend/app/agents/: detection.py  image_gen.py  outfit_composer.py  stylist.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  avatars.py  gallery.py  garments.py  outfits.py  renders.py  settings.py  stylist.py  ws.py
backend/app/core/: config.py  database.py  dev_mode.py  security.py
backend/app/llm/: outfit_composer.py  stylist.py
backend/app/models/: __init__.py  avatar.py  base.py  garment.py  outfit.py  render.py  user.py
backend/app/schemas/: auth.py  avatar.py  garment.py  outfit.py  render.py
backend/app/services/: birefnet.py  file_storage.py  vector_store.py
backend/app/tasks/: avatar_tasks.py  celery_app.py  detection_tasks.py  notifications.py  render_tasks.py
backend/tests/unit/: test_agents.py  test_llm.py  test_security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  avatars.ts  client.ts  gallery.ts  garments.ts  outfits.ts
frontend/src/components/: GarmentChip.tsx  GarmentPreviewModal.tsx  OutfitProposalBubble.tsx  (+1 more)
nginx/: nginx.conf
(+14 files in other folders)
