[project]
name = "wardrobe-backend"
version = "0.1.0"
description = "Backend for Wardrobe Try-On"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "birefnet>=0.1.1",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.6",
    "google-genai>=0.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.1.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "qdrant-client>=1.12.1",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
